fdo#74983: Instability in A11y after integration of IA2-branch

The IA2-integration added some special cases for calculating textbounds for
attributeruns when automatic spellchecking is active. This does not seem to
effect linux but messes up accessibility on mac. This patch removes the special
cases avoids the problem on Mac. When daily builds gets available for Windows
I will do some testing there to see if I can find any problems.

Change-Id: I203da4fe1c6e5d4915d19e1704073e58f8aa88c9
Reviewed-on: https://gerrit.libreoffice.org/8591
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>